--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "db:studio": "drizzle-kit studio",
     "db:seed": "tsx server/seed.ts",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -40,6 +40,7 @@
     "expo": "^54.0.9",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.9",
+    "expo-dev-client": "~6.0.13",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
