--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,4 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
   repositories {
     google()
@@ -9,6 +8,8 @@ buildscript {
     classpath('com.android.tools.build:gradle')
     classpath('com.facebook.react:react-native-gradle-plugin')
     classpath('org.jetbrains.kotlin:kotlin-gradle-plugin')
+    classpath "com.android.tools.build:gradle:4.2.1"
+    classpath 'com.google.gms:google-services:4.4.3'
   }
 }
 
