--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "agendamento",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -16,6 +16,7 @@
     "web": "expo start --web",
     "prebuild": "npx expo prebuild --clean",
     "build": "expo export",
+    "build:tenants": "ts-node scripts/build-tenant.ts",
     "test": "jest --watchAll",
     "lint": "expo lint"
   },
@@ -31,6 +32,7 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@stripe/stripe-react-native": "0.50.3",
+    "@supabase/supabase-js": "^2.75.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
@@ -76,6 +78,7 @@
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
     "stripe": "^19.0.0",
+    "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
     "twilio": "^5.10.2",
     "uuid": "^13.0.0",
